glpi/k8s/kubectl/grafana/30-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: glpi
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-glpi
    app.kubernetes.io/version: "7.5.2"
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: glpi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - name: grafana-http
    # nodePort: 30475
    protocol: TCP
    port: 80
    targetPort: 3000
