glpi/k8s/kubectl/grafana/40-grafana-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: grafana-ingress
  namespace: glpi
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-glpi
    app.kubernetes.io/version: "7.5.2"
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: glpi
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.glpi.localdomain
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana-service
              servicePort: 80
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.140
